se añadieroin los endpoitns de pago
